# occt-wasm

./: .gitignore  CMakeLists.txt  CMakeLists副本.txt  package.json  pnpm-lock.yaml  test_mesher.bat  test_mesher.sh  tsconfig.json
.cursor/rules/: wasm.mdc
docs/: brep-refactor-plan.md  occt-location-model.md  refactor-transform-and-subshape-id.md  sketch-line-tool-plan.md  序列化.md
examples/: index.html  tsconfig.json  vite.config.ts
examples/docs/: worker-architecture.md
examples/public/: hinge.iges  occt-wasm.d.ts  occt-wasm.js  occt-wasm.wasm
examples/src/: global.d.ts  main.ts  router.ts
examples/src/cases/: index.ts
examples/src/cases/basic-shapes/: index.ts
examples/src/cases/bool-operate/: index.ts
examples/src/cases/box-show/: index.ts
examples/src/cases/brep-show/: index.ts
examples/src/cases/exchange/: index.ts
examples/src/cases/exturde/: index.ts
examples/src/cases/fillet-chamfer/: index.ts
examples/src/cases/font/: index.ts
examples/src/cases/loft/: index.ts
examples/src/cases/revolve/: index.ts
examples/src/cases/serialize/: index.ts
examples/src/cases/shell/: index.ts
examples/src/cases/sketch/: index.ts
examples/src/cases/sweep/: index.ts
examples/src/common/: BRepResult.ts  BlenderControls.ts  app.ts  brep-result.ts  catch.ts  controls.ts  event-listener.ts  heightlight-manager.ts  helper-pass.ts  id-tool.ts  object-manager.ts  object.ts  occt-loader.ts  selection-manager.ts  shape-converter.ts  three-renderer.ts  transform-controls.ts  types.ts  utils.ts
examples/src/sdk/: axis.ts  brep.ts  convert.ts  curve.ts  exchange.ts  font.ts  gc.ts  index.ts  modeler.ts  occt-loader.ts  shape-factory.ts  shape.ts  sketch.ts  types.ts  utils.ts  vector3.ts
scripts/: build.ts  cleanBuild.ts  exeAsync.ts  setupLib.ts
src/: main.cpp
src/brep/: BRepBindings.cpp  BRepBindings.h  PrimApiBindings.cpp  PrimApiBindings.h  ShapeBindings.cpp  ShapeBindings.h
src/exchange/: ExchangeBindings.cpp  ExchangeBindings.h
src/exporter/: ExporterBindings.cpp  ExporterBindings.h
src/geometry/: ChamferBuilder.cpp  ChamferBuilder.h  CurveBindings.cpp  CurveBindings.h  FilletBuilder.cpp  FilletBuilder.h  FilletChamferBindings.cpp  FilletChamferBindings.h  GeomBindings.cpp  GeomBindings.h  GeometryBindings.cpp  GeometryBindings.h  ModelerBindings.cpp  ModelerBindings.h  PrimApiBindings.cpp
src/loader/: LoaderBindings.cpp  LoaderBindings.h
src/math/: MathBindings.cpp  MathBindings.h
src/mesher/: Mesher.cpp  Mesher.h  Mesher.tmp  MesherBindings.cpp  MesherBindings.h  TEST_README.md  test_mesher.cpp
src/shared/: Shared.cpp  Shared.h  Shared.hpp  SharedTypes.hpp
src/utils/: UtilsBindings.cpp  UtilsBindings.h
